# plow-argos3

./: .gitignore  .syntastic_cpp_config  README.md  notes
argos/: crossroad-fb.argos
crossroad_footbot_controller/: .cproject  .project  CMakeLists.txt  _CMakeLists.txt  crossroad_footbot_controller.cpp  crossroad_footbot_controller.h
crossroad_loop_footbot/: .cproject  .project  ARGoSCheckQTOpenGL.cmake  CMakeLists.txt  crossroad_loop_footbot.cpp  crossroad_loop_footbot.h
embedding/: .ycm_extra_conf.py  CMakeLists.txt  environment.cpp  environment.h  global.cpp  global.h  main_.cpp  sockets.cpp  sockets.h
